{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 46,
  "lineage": "9b46a604-69ff-6c3e-a70e-5418bfd66b23",
  "resources": [
    {
      "module": "module.vm-region1",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-swedencentral/providers/Microsoft.Network/networkInterfaces/nic-vm",
            "internal_domain_name_suffix": "wvvcmjb1f45u3ajjbrmwlzwmvd.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-swedencentral/providers/Microsoft.Network/publicIPAddresses/pip-vm-region1",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-swedencentral/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/snet-vm"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "swedencentral",
            "name": "nic-vm",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "rg-vm-552-swedencentral"
          },
          "dependencies": [
            "module.vm-region1.azurerm_public_ip.pip",
            "module.vm-region1.azurerm_resource_group.rg",
            "module.vm-region1.azurerm_subnet.snet",
            "module.vm-region1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region1",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-swedencentral/providers/Microsoft.Network/networkSecurityGroups/nsg-vm",
            "location": "swedencentral",
            "name": "nsg-vm",
            "resource_group_name": "rg-vm-552-swedencentral",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vm-region1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region1",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "0.0.0.0/0"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-swedencentral/providers/Microsoft.Network/networkSecurityGroups/nsg-vm/securityRules/allow-rdp",
            "name": "allow-rdp",
            "network_security_group_name": "nsg-vm",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "rg-vm-552-swedencentral",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vm-region1.azurerm_network_security_group.nsg",
            "module.vm-region1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region1",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-swedencentral/providers/Microsoft.Network/publicIPAddresses/pip-vm-region1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "135.225.29.136",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "pip-vm-region1",
            "resource_group_name": "rg-vm-552-swedencentral",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.vm-region1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region1",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-swedencentral/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/snet-vm",
            "name": "snet-vm",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vm-552-swedencentral",
            "virtual_network_name": "vnet-app"
          },
          "dependencies": [
            "module.vm-region1.azurerm_resource_group.rg",
            "module.vm-region1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region1",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-swedencentral/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/snet-vm",
            "network_security_group_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-swedencentral/providers/Microsoft.Network/networkSecurityGroups/nsg-vm",
            "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-swedencentral/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/snet-vm"
          },
          "dependencies": [
            "module.vm-region1.azurerm_network_security_group.nsg",
            "module.vm-region1.azurerm_resource_group.rg",
            "module.vm-region1.azurerm_subnet.snet",
            "module.vm-region1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region1",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "24266ab5-2f3b-4ebf-8129-0c5965e6ccab",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-swedencentral/providers/Microsoft.Network/virtualNetworks/vnet-app",
            "location": "swedencentral",
            "name": "vnet-app",
            "resource_group_name": "rg-vm-552-swedencentral"
          },
          "dependencies": [
            "module.vm-region1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region2",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-northcentralus/providers/Microsoft.Network/networkInterfaces/nic-vm",
            "internal_domain_name_suffix": "ibqee4p3u0gehec4n5bx3gktxc.ex.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-northcentralus/providers/Microsoft.Network/publicIPAddresses/pip-vm-region1",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-northcentralus/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/snet-vm"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northcentralus",
            "name": "nic-vm",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "rg-vm-552-northcentralus"
          },
          "dependencies": [
            "module.vm-region2.azurerm_public_ip.pip",
            "module.vm-region2.azurerm_resource_group.rg",
            "module.vm-region2.azurerm_subnet.snet",
            "module.vm-region2.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region2",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-northcentralus/providers/Microsoft.Network/networkSecurityGroups/nsg-vm",
            "location": "northcentralus",
            "name": "nsg-vm",
            "resource_group_name": "rg-vm-552-northcentralus",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vm-region2.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region2",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "0.0.0.0/0"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-northcentralus/providers/Microsoft.Network/networkSecurityGroups/nsg-vm/securityRules/allow-rdp",
            "name": "allow-rdp",
            "network_security_group_name": "nsg-vm",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "rg-vm-552-northcentralus",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vm-region2.azurerm_network_security_group.nsg",
            "module.vm-region2.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region2",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-northcentralus/providers/Microsoft.Network/publicIPAddresses/pip-vm-region1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.162.247.111",
            "ip_version": "IPv4",
            "location": "northcentralus",
            "name": "pip-vm-region1",
            "resource_group_name": "rg-vm-552-northcentralus",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.vm-region2.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region2",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-northcentralus/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/snet-vm",
            "name": "snet-vm",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vm-552-northcentralus",
            "virtual_network_name": "vnet-app"
          },
          "dependencies": [
            "module.vm-region2.azurerm_resource_group.rg",
            "module.vm-region2.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region2",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-northcentralus/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/snet-vm",
            "network_security_group_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-northcentralus/providers/Microsoft.Network/networkSecurityGroups/nsg-vm",
            "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-northcentralus/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/snet-vm"
          },
          "dependencies": [
            "module.vm-region2.azurerm_network_security_group.nsg",
            "module.vm-region2.azurerm_resource_group.rg",
            "module.vm-region2.azurerm_subnet.snet",
            "module.vm-region2.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region2",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "79426040-a6fd-438c-905e-6fc37e9953ba",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-northcentralus/providers/Microsoft.Network/virtualNetworks/vnet-app",
            "location": "northcentralus",
            "name": "vnet-app",
            "resource_group_name": "rg-vm-552-northcentralus"
          },
          "dependencies": [
            "module.vm-region2.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region3",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-koreacentral/providers/Microsoft.Network/networkInterfaces/nic-vm",
            "internal_domain_name_suffix": "jrcl1bh34zmu1fgkwhtwqg1e1c.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-koreacentral/providers/Microsoft.Network/publicIPAddresses/pip-vm-region1",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-koreacentral/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/snet-vm"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreacentral",
            "name": "nic-vm",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "rg-vm-552-koreacentral"
          },
          "dependencies": [
            "module.vm-region3.azurerm_public_ip.pip",
            "module.vm-region3.azurerm_resource_group.rg",
            "module.vm-region3.azurerm_subnet.snet",
            "module.vm-region3.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region3",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-koreacentral/providers/Microsoft.Network/networkSecurityGroups/nsg-vm",
            "location": "koreacentral",
            "name": "nsg-vm",
            "resource_group_name": "rg-vm-552-koreacentral",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vm-region3.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region3",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "0.0.0.0/0"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-koreacentral/providers/Microsoft.Network/networkSecurityGroups/nsg-vm/securityRules/allow-rdp",
            "name": "allow-rdp",
            "network_security_group_name": "nsg-vm",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "rg-vm-552-koreacentral",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vm-region3.azurerm_network_security_group.nsg",
            "module.vm-region3.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region3",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-koreacentral/providers/Microsoft.Network/publicIPAddresses/pip-vm-region1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.41.76.252",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "pip-vm-region1",
            "resource_group_name": "rg-vm-552-koreacentral",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.vm-region3.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region3",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-koreacentral/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/snet-vm",
            "name": "snet-vm",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vm-552-koreacentral",
            "virtual_network_name": "vnet-app"
          },
          "dependencies": [
            "module.vm-region3.azurerm_resource_group.rg",
            "module.vm-region3.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region3",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-koreacentral/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/snet-vm",
            "network_security_group_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-koreacentral/providers/Microsoft.Network/networkSecurityGroups/nsg-vm",
            "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-koreacentral/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/snet-vm"
          },
          "dependencies": [
            "module.vm-region3.azurerm_network_security_group.nsg",
            "module.vm-region3.azurerm_resource_group.rg",
            "module.vm-region3.azurerm_subnet.snet",
            "module.vm-region3.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm-region3",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "84bd444c-f6fd-4d59-94ca-b1e7681b64da",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-vm-552-koreacentral/providers/Microsoft.Network/virtualNetworks/vnet-app",
            "location": "koreacentral",
            "name": "vnet-app",
            "resource_group_name": "rg-vm-552-koreacentral"
          },
          "dependencies": [
            "module.vm-region3.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}